BD data Agregada

--- a/application/modules/default/views/scripts/index/index.phtml
+++ b/application/modules/default/views/scripts/index/index.phtml
@@ -67,7 +67,7 @@
         <div style="float:left; margin-right:6px"><strong>Todos nuestros Productos:</strong></div>
         <select id="quicklink_products">
             <option selected="selected">Seleccionar un Producto</option>
-            <option>ESET Smart Security</option>
+            <option>prueva</option>
             <option>ESET NOD32 Antivirus</option>
             <option>ESET Cybersecurity para Mac</option>
             <option>ESET Mobile Security</option>
