--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -38,13 +38,9 @@
                     $this->navigation()->menu()->setPartial($partial);
                     echo $this->navigation()->menu()->render();
                     ?>
-                    <form id="search_form" action="http://search.eset.com/esetsite/index" method="get" onsubmit="if(document.getElementById('question_box').value == 'Type your question here...' || document.getElementById('question_box').value == '') { document.getElementById('question_box').focus(); return false; } else { return true; }">
+                    <form id="search_form" action="/buscar" method="post" >
                         <div id="navigation_search" style="padding:0px; margin:0px; margin-right:15px;">
-                            <input type="hidden" name="page" value="answers" />
-                            <input type="hidden" name="type" value="search" />
-                            <input type="hidden" name="locale" value="es_ES" />
-                            <input type="hidden" name="option" value="none" />
-                            <input type="text" name="question_box" id="question_box" value="Escriba su consulta aquí..." onblur="if(this.value=='') this.value= 'Escriba su consulta aquí...';" onfocus="if(this.value=='Escriba su consulta aquí...') this.value='';" />
+                            <input type="text" name="search" id="question_box" value="Escriba su consulta aquí..." onblur="if(this.value=='') this.value= 'Escriba su consulta aquí...';" onfocus="if(this.value=='Escriba su consulta aquí...') this.value='';" />
                             <a href="#" onclick="if(this.parentNode.parentNode.onsubmit()){this.parentNode.parentNode.submit();}return false;">&nbsp;</a>
                         </div>
                     </form>
@@ -62,15 +58,13 @@
                 <div id="footer" style="padding-top:13px; padding-bottom:13px; height:50px;">
 
                     <ul style="overflow: hidden; float: left;">
-                        <li><a href="http://feeds.feedburner.com/esetla-noticias" target="_blank"><span class="rss">RSS</span></a></li>
+                        <li><a href="/productos">Nuestros Productos</a></li>
                         <li>|</li>
-                        <li><a href="/compania/contacto">Contáctenos</a></li>
+                        <li><a href="/marcas">Nuestras Marcas</a></li>
                         <li>|</li>
-                        <li><a href="/libro-de-quejas-online">Libro de quejas online</a></li>
+                        <li><a href="/soluciones">Nuestras Soluciones</a></li>
                         <li>|</li>
-                        <li><a href="/compania/politica-privacidad">Políticas de privacidad</a></li>
-                        <li>|</li>
-                        <li><a href="/compania/avisos-legales">Avisos Legales</a></li>
+                        <li><a href="/contactenos">Contactenos</a></li>
                     </ul>
                     <div style="overflow: hidden; float: right;">
                         <div class="contenedor-redes-sociales">
@@ -95,7 +89,11 @@
                             </div>
                         </div>
                     </div>
-                    <div class="fl" style="padding-top:30px;">&copy; Copyright 1992-2012 por ESET, LLC y ESET, spol. s.r.o. Todos los derechos reservados.</div>
+                    
+                    <div class="fl" style="padding-top:30px; width: 980px; text-align: center;">
+                        Av. Los Conquistadores 346 - San Isidro | Telf: (051) 421-1644 | Fax: (051) 421-1644 | e-mail: eortega@itera.com.pe
+                        <p>
+                        Copyright &copy; <?php echo date('Y'); ?> ITERA S.A.C.</div>
 
                 </div></div>
         </div>
