--- a/application/modules/admin/views/scripts/index/index.phtml
+++ b/application/modules/admin/views/scripts/index/index.phtml
@@ -3,7 +3,7 @@
 
 	<!-- start logo -->
 	<div id="logo-login">
-		<a href="index.html"><img src="images/shared/logo.png" width="156" height="40" alt="" /></a>
+		<a href="index.html"><img src="<?php echo CST_Server_ServerStaticAdmin::getUrl(); ?>/   images/shared/logo.png" width="156" height="40" alt="" /></a>
 	</div>
 	<!-- end logo -->
 	
