--- a/application/modules/default/views/scripts/nosotros/index.phtml
+++ b/application/modules/default/views/scripts/nosotros/index.phtml
@@ -1,1 +1,7 @@
-<?php echo $this->informacionPagina['ContenidoPaginaInterna']; ?>
+<div id="content_wrapper">
+    <div id="content_homepage" style="padding-top:10px; padding-bottom:15px;">
+        <div id="content" style="height: 500px" >
+            <?php echo $this->informacionPagina['ContenidoPaginaInterna']; ?>
+        </div>
+    </div>
+</div>
