--- a/public/static/css/global.css
+++ b/public/static/css/global.css
@@ -2370,7 +2370,7 @@ ul#nav li.first:hover > ul {
 	height:51px;
 	float:left;
 	padding:8px 10px 0 10px;
-	background:url(/images/redes-sociales/center.jpg) repeat-x;
+	background:url(../images/redes-sociales/center.jpg) repeat-x;
 }
 .redes-sociales-iconos-right {
 	width: 12px;
