--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -55,47 +55,15 @@
                 <div id="body_wrapper">
                     <?php echo $this->layout()->content ?>
                     <div id="quicklinks_cell">
-    <div id="quicklinks">
-        <a href="/comprar" title="">Comprar</a> | <a href="http://blogs.eset-la.com/" target="_blank" title="">Blogs de ESET</a> | <a href="/registracion-producto" title="">Activar Software</a> | <a href="/download/trial-gratuito" title="">Evaluación Gratuita</a> | <a href="/online-scanner" title="">Online Scanner</a> | <a href="/hogar/compare-eset" title="">ESET vs. Competencia</a> | <a href="/pe/centro-prensa" title="">Centro de Prensa</a> | <a href="/centro-amenazas" title="">Centro de Amenazas</a> | <a href="/soporte/contacto" title="">Soporte</a>
-    </div>
-    <div id="product_selector">
-        <div style="float:left; margin-right:6px"><strong>Todos nuestros Productos:</strong></div>
-        <select id="quicklink_products">
-            <option selected="selected">Seleccionar un Producto</option>
-            <option>prueva</option>
-            <option>ESET NOD32 Antivirus</option>
-            <option>ESET Cybersecurity para Mac</option>
-            <option>ESET Mobile Security</option>
-            <option>ESET Endpoint Security</option>
-            <option>ESET Endpoint Antivirus</option>
-            <option>ESET Remote Administrator</option>
-            <option>ESET Server Security</option>
-            <option>ESET Online Scanner</option>
-            <option>ESET SysInspector</option>
-        </select>
-    </div>
-</div>
-<script type="text/javascript">
-    var quicklink_products = {"ESET Smart Security":"\/hogar\/smart-security","ESET NOD32 Antivirus":"\/hogar\/nod32-antivirus","ESET Cybersecurity para Mac":"\/hogar\/cybersecurity-mac","ESET Mobile Security":"\/hogar\/mobile-security-antivirus","ESET Endpoint Security":"\/empresas\/medianas\/eset-endpoint-security","ESET Endpoint Antivirus":"\/empresas\/medianas\/eset-endpoint-antivirus","ESET Remote Administrator":"\/empresas\/remote-administrator","ESET Server Security":"\/empresas\/server-security","ESET Online Scanner":"\/online-scanner","ESET SysInspector":"\/download\/sysinspector"};
-    document.getElementById('quicklink_products').onchange = function() {
-        if(this.selectedIndex > 0) {
-            window.location = quicklink_products[this.options[this.selectedIndex].innerHTML];
-        }
-    }
-</script>  
-                </div>
-                <div id="footer" style="padding-top:13px; padding-bottom:13px; height:50px;">
-
-                    <ul style="overflow: hidden; float: left;">
-                        <li><a href="/productos">Nuestros Productos</a></li>
-                        <li>|</li>
-                        <li><a href="/marcas">Nuestras Marcas</a></li>
-                        <li>|</li>
-                        <li><a href="/soluciones">Nuestras Soluciones</a></li>
-                        <li>|</li>
-                        <li><a href="/contactenos">Contactenos</a></li>
-                    </ul>
-                    <div style="overflow: hidden; float: right;">
+                        <div id="quicklinks"  >
+                        <a href="/productos">Nuestros Productos</a>
+                        |
+                        <a href="/marcas">Nuestras Marcas</a>
+                        |
+                        <a href="/soluciones">Nuestras Soluciones</a>
+                        |
+                        <a href="/contactenos">Contactenos</a>
+                    </div>
                         <div class="contenedor-redes-sociales">
                             <div class="redes-sociales-iconos">
                                 <div class="redes-sociales-iconos-left"><img src="<?php echo CST_Server_ServerStatic::getUrl(); ?>/images/redes-sociales/left.jpg" width="12" height="59" /></div>
@@ -103,26 +71,48 @@
                                     <!--div style="float:left; padding-top:13px;"><iframe src="http://www.facebook.com/plugins/like.php?locale=es_ES&app_id=127497460673922&amp;href=http%3A%2F%2Fwww.eset-la.com&amp;send=false&amp;layout=button_count&amp;width=120&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:120px; height:21px;" allowTransparency="true"></iframe></div-->
                                     <div style="float:left; padding-top:13px;">
                                         <iframe src="//www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2FESETLA&amp;send=false&amp;layout=button_count&amp;width=130&amp;show_faces=true&amp;action=like&amp;colorscheme=light&amp;font&amp;height=21&amp;appId=167226613352031" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:130px; height:21px;" allowTransparency="true"></iframe>
-                                        <!--div class="fb-like" data-href="http://www.eset-la.com" data-send="false" data-layout="button_count" data-width="130" data-show-faces="false"></div-->
                                     </div>
-                                    <div style="float:left; padding-top:13px;"><g:plusone size="small" href="http://www.eset-la.com/"></g:plusone></div>
-
-                                    <div class="fl-redes"><a href="http://www.facebook.com/ESETLA"><img src="/images/redes-sociales/facebook.jpg" alt="Facebook" width="40" height="40" border="0" /></a></div>
-                                    <div class="fl-redes"><a href="http://twitter.com/#!/ESETLA"><img src="/images/redes-sociales/twitter.jpg" alt="Twitter" width="40" height="40" border="0" /></a></div>
-
-                                    <div class="fl-redes"><a href="http://www.youtube.com/esetla?gl=ES&amp;hl=es"><img src="/images/redes-sociales/youtube.jpg" alt="YouTube" width="40" height="40" border="0" /></a></div>
-                                    <div class="fl-redes"><a href="http://feeds.feedburner.com/esetla-comunicacion"><img src="/images/redes-sociales/rss.jpg" alt="RSS" width="40" height="40" border="0" /></a></div>
+                                    <div class="fl-redes"><a href="http://www.facebook.com/ESETLA"><img src="<?php echo CST_Server_ServerStatic::getUrl(); ?>/images/redes-sociales/facebook.jpg" alt="Facebook" width="40" height="40" border="0" /></a></div>
+                                    <div class="fl-redes"><a href="http://twitter.com/#!/ESETLA"><img src="<?php echo CST_Server_ServerStatic::getUrl(); ?>/images/redes-sociales/twitter.jpg" alt="Twitter" width="40" height="40" border="0" /></a></div>
                                     <div class="clear"></div>
                                 </div>
                                 <div class="redes-sociales-iconos-right"><img src="<?php echo CST_Server_ServerStatic::getUrl(); ?>/images/redes-sociales/right.jpg" width="12" height="59" /></div>
                             </div>
                         </div>
+<!--                        <div id="quicklinks">
+                            <a href="/comprar" title="">Comprar</a> | <a href="http://blogs.eset-la.com/" target="_blank" title="">Blogs de ESET</a> | <a href="/registracion-producto" title="">Activar Software</a> | <a href="/download/trial-gratuito" title="">Evaluación Gratuita</a> | <a href="/online-scanner" title="">Online Scanner</a> | <a href="/hogar/compare-eset" title="">ESET vs. Competencia</a> | <a href="/pe/centro-prensa" title="">Centro de Prensa</a> | <a href="/centro-amenazas" title="">Centro de Amenazas</a> | <a href="/soporte/contacto" title="">Soporte</a>
+                        </div>
+                        <div id="product_selector">
+                            <div style="float:left; margin-right:6px"><strong>Todos nuestros Productos:</strong></div>
+                            <select id="quicklink_products">
+                                <option selected="selected">Seleccionar un Producto</option>
+                                <option>prueva</option>
+                                <option>ESET NOD32 Antivirus</option>
+                                <option>ESET Cybersecurity para Mac</option>
+                                <option>ESET Mobile Security</option>
+                                <option>ESET Endpoint Security</option>
+                                <option>ESET Endpoint Antivirus</option>
+                                <option>ESET Remote Administrator</option>
+                                <option>ESET Server Security</option>
+                                <option>ESET Online Scanner</option>
+                                <option>ESET SysInspector</option>
+                            </select>
+                        </div>-->
                     </div>
-                    
+                    <script type="text/javascript">
+                        var quicklink_products = {"ESET Smart Security":"\/hogar\/smart-security","ESET NOD32 Antivirus":"\/hogar\/nod32-antivirus","ESET Cybersecurity para Mac":"\/hogar\/cybersecurity-mac","ESET Mobile Security":"\/hogar\/mobile-security-antivirus","ESET Endpoint Security":"\/empresas\/medianas\/eset-endpoint-security","ESET Endpoint Antivirus":"\/empresas\/medianas\/eset-endpoint-antivirus","ESET Remote Administrator":"\/empresas\/remote-administrator","ESET Server Security":"\/empresas\/server-security","ESET Online Scanner":"\/online-scanner","ESET SysInspector":"\/download\/sysinspector"};
+                        document.getElementById('quicklink_products').onchange = function() {
+                            if(this.selectedIndex > 0) {
+                                window.location = quicklink_products[this.options[this.selectedIndex].innerHTML];
+                            }
+                        }
+                    </script>  
+                </div>
+                <div id="footer" style="padding-top:13px; padding-bottom:13px; height:50px;">
                     <div class="fl" style="padding-top:30px; width: 980px; text-align: center;">
                         Av. Los Conquistadores 346 - San Isidro | Telf: (051) 421-1644 | Fax: (051) 421-1644 | e-mail: eortega@itera.com.pe
                         <p>
-                        Copyright &copy; <?php echo date('Y'); ?> ITERA S.A.C.</div>
+                            Copyright &copy; <?php echo date('Y'); ?> ITERA S.A.C.</div>
 
                 </div></div>
         </div>
