--- a/public/static/css/ticker.css
+++ b/public/static/css/ticker.css
@@ -4,7 +4,7 @@
     padding: 0 10px;
 }
 #ticker {
-    background: url("/images/ticker-bg.png") no-repeat scroll 0 0 #F9F9F9;
+    background: url("../images/ticker-bg.png") no-repeat scroll 0 0 #F9F9F9;
     height: 25px;
     margin: 12px 0 20px 52px;
     width: 880px;
