--- a/application/modules/default/views/scripts/partial/menucategorias.phtml
+++ b/application/modules/default/views/scripts/partial/menucategorias.phtml
@@ -1,4 +1,4 @@
-<div class="navbar2">
+<div class="navbar2" id="treeMenu">
     <ul>
         <?php
         $string = '';
@@ -8,16 +8,16 @@
             } else {
                 $string.= '<li>';
             }
-            $string.= '<a href="' . $index['uri'] . '" >' . $index['label'] . '</a>';
+            $string.= '<a class="parent" href="' . $index['uri'] . '" >' . $index['label'] . '</a><span></span>';
             if (isset($index['pages']) && !empty($index['pages'])) {
-                $string.= '<ul>';
+                $string.= '<div><ul>';
                 foreach ($index['pages'] as $index2) {
                     if ($this->getPathInfo == $index2['uri']) {
                         $string.= '<li class="active">';
                     } else {
                         $string.= '<li>';
                     }
-                    $string.= '<a href="' . $index2['uri'] . '" >' . $index2['label'] . '</a>';
+                    $string.= '<span></span><a class="parent" href="' . $index2['uri'] . '" >' . $index2['label'] . '</a><div>';
                     if (isset($index2['pages']) && !empty($index2['pages'])) {
                         $string.= '<ul>';
                         foreach ($index2['pages'] as $index3) {
@@ -26,14 +26,14 @@
                             } else {
                                 $string.= '<li>';
                             }
-                            $string.= '<a href="' . $index3['uri'] . '" >' . $index3['label'] . '</a>';
+                            $string.= '<span></span><a href="' . $index3['uri'] . '" >' . $index3['label'] . '</a>';
                             $string.= '</li>';
                         }
                         $string.= '</ul>';
                     }
-                    $string.= '</li>';
+                    $string.= '</div></li>';
                 }
-                $string.= '</ul>';
+                $string.= '</ul></div>';
             }
             $string.= '</li>';
         }
