--- a/application/modules/default/views/scripts/productos/index.phtml
+++ b/application/modules/default/views/scripts/productos/index.phtml
@@ -1,26 +1,18 @@
-<div id="content_wrapper">
-    <div id="content_homepage" style="padding-top:10px; padding-bottom:15px;">
-        <div id="content" style="height: 500px" >
-            <div class="grid_5" >
-                Columna Izquierda
-                <?php
-                $pagerData = array(
-                    'getPathInfo' => $this->getPathInfo,
-                    'listaCategoriasNavigator' => $this->listaCategoriasNavigator
-                );
-                echo $this->partial('/partial/menucategorias.phtml', $pagerData)
-                ?>
-            </div>
-            <div class="grid_19" >
-                Columna Derecha
-                <div class="block_content">
-                    <?php
-                    echo $paginator = $this->paginationControl($this->productos, 'Sliding', '/paginator/Product.phtml');
-                    $params = array('productos' => $this->productos, 'paginator' => $paginator);
-                    echo $this->partial('/partial/listaProductosPaginator.phtml', $params)
-                    ?>
-                </div>               
-            </div>
-        </div>
-    </div>
+<div class="producos_colum_izq" >
+    <?php
+    $pagerData = array(
+        'getPathInfo' => $this->getPathInfo,
+        'listaCategoriasNavigator' => $this->listaCategoriasNavigator
+    );
+    echo $this->partial('/partial/menucategorias.phtml', $pagerData)
+    ?>
+</div>
+<div class="producos_colum_derc" >
+    <div class="block_content">
+        <?php
+        echo $paginator = $this->paginationControl($this->productos, 'Sliding', '/paginator/Product.phtml');
+        $params = array('productos' => $this->productos, 'paginator' => $paginator);
+        echo $this->partial('/partial/listaProductosPaginator.phtml', $params)
+        ?>
+    </div>               
 </div>
