--- a/application/modules/default/views/scripts/partial/listaProductosPaginator.phtml
+++ b/application/modules/default/views/scripts/partial/listaProductosPaginator.phtml
@@ -1,16 +1,17 @@
 <?php if (count($this->productos) > 0) { ?>
     <ul>
         <?php foreach ($this->productos as $index): ?>
-            <li class="">
+            <li class="producto_item">
                 <div id="">
-                    <h5>
-                        <a href="<?php echo $this->baseUrl(); ?>/productos/detalle-producto/<?php echo $index['SlugProducto'] ?>" title="<?php echo $index['NombreProducto'] ?>"><?php echo $index['NombreProducto'] ?></a>
-                    </h5>
+
                     <div>
                         <a href="<?php echo $this->baseUrl(); ?>/productos/detalle-producto/<?php echo $index['SlugProducto'] ?>" title="<?php echo $index['NombreProducto'] ?>">
                             <img src="<?php echo CST_Server_ServerDinamic::getUrl(); ?>/imagen-producto/<?php echo $index['ImagenProducto'] ?>?<?php echo rand(0, 1000); ?>" alt="<?php echo $index['NombreProducto'] ?>" />
                         </a>
                     </div>
+                    <h5 class="title_producto">
+                        <a href="<?php echo $this->baseUrl(); ?>/productos/detalle-producto/<?php echo $index['SlugProducto'] ?>" title="<?php echo $index['NombreProducto'] ?>"><?php echo $index['NombreProducto'] ?></a>
+                    </h5>
                     <div>
                         <form id="form_pres_<?php echo $index['IdProducto'] ?>" action="/carrito-compras/registrar-producto" method="Post">
                             <input type="hidden" id="hidden_idproducto_<?php echo $index['IdProducto'] ?>" name="slugProducto" value="<?php echo $index['SlugProducto'] ?>" />
@@ -29,6 +30,7 @@
         <?php endforeach; ?>
 
     </ul>
+    <div class="clear"></div>
     <?php echo $this->paginator; ?>
 <?php } else { ?>    
     No se encontro ningun producto
