--- a/application/modules/default/views/scripts/paginator/Product.phtml
+++ b/application/modules/default/views/scripts/paginator/Product.phtml
@@ -6,10 +6,10 @@
         <!-- Previous page link -->
         <?php if (isset($this->previous)): ?>
             <a href="/productos/page/<?php echo $this->previous; ?>">    
-                &lt; Previous
+                &lt; Anterior
             </a> 
         <?php else: ?>
-            <span class="disabled">&lt; Previous</span> 
+            <span class="disabled">&lt; Anterior</span> 
         <?php endif; ?>
 
         <!-- Numbered page links -->
@@ -25,10 +25,10 @@
         <!-- Next page link -->
         <?php if (isset($this->next)): ?>
             <a href="/productos/page/<?php echo $this->next; ?>">    
-                Next &gt;
+                Siguiente &gt;
             </a>
         <?php else: ?>
-            <span class="disabled">Next &gt;</span>
+            <span class="disabled">Siguiente &gt;</span>
         <?php endif; ?>
     </div>
 <?php endif; ?>
