--- a/application/modules/default/views/scripts/productos/productos-area.phtml
+++ b/application/modules/default/views/scripts/productos/productos-area.phtml
@@ -2,6 +2,7 @@
     <?php
     $pagerData = array(
         'getPathInfo' => $this->getPathInfo,
+        'params' => $this->params,
         'listaCategoriasNavigator' => $this->listaCategoriasNavigator
     );
     echo $this->partial('/partial/menucategorias.phtml', $pagerData)
