--- a/application/modules/default/views/scripts/partial/listaProductosPaginator.phtml
+++ b/application/modules/default/views/scripts/partial/listaProductosPaginator.phtml
@@ -19,7 +19,7 @@
                                 <a href="/productos/detalle-producto/<?php echo $index['SlugProducto'] ?>" title="Ver">
                                     Ver <img src="/static/images/double_arrow_right.gif" alt="Conozca más"/>
                                 </a>
-                                <a style="float: right" href="/cotizar-productos" id="ajax_id_product_<?php echo $index['IdProducto'] ?>" rel="ajax_id_product_<?php echo $index['IdProducto'] ?>"  title="Añadir al carrito">
+                                <a style="float: right" href="/cotizar-productos" id="ajax_id_product_<?php echo $index['IdProducto'] ?>" rel="ajax_id_product_<?php echo $index['IdProducto'] ?>"  title="Cotizar <?php echo $index['NombreProducto'] ?>">
                                     <img src="/static/images/btcotizar.jpg" alt="Conozca más"/>
                                 </a>
                                 
