--- a/application/modules/default/views/scripts/productos/productos-area.phtml
+++ b/application/modules/default/views/scripts/productos/productos-area.phtml
@@ -2,7 +2,7 @@
     <?php
     $pagerData = array(
         'getPathInfo' => $this->getPathInfo,
-        'params' => $this->params,
+        'listaMarcas' => $this->listaMarcas,
         'listaCategoriasNavigator' => $this->listaCategoriasNavigator
     );
     echo $this->partial('/partial/menucategorias.phtml', $pagerData)
@@ -17,4 +17,3 @@
         ?>
     </div>               
 </div>
-
