--- a/application/modules/default/views/scripts/productos/productos-sub-categorias.phtml
+++ b/application/modules/default/views/scripts/productos/productos-sub-categorias.phtml
@@ -2,6 +2,7 @@
     <?php
     $pagerData = array(
         'getPathInfo' => $this->getPathInfo,
+        'listaMarcas' => $this->listaMarcas,
         'listaCategoriasNavigator' => $this->listaCategoriasNavigator
     );
     echo $this->partial('/partial/menucategorias.phtml', $pagerData)
