--- a/public/static/css/productos.css
+++ b/public/static/css/productos.css
@@ -48,6 +48,24 @@ width: 100%;
 .paginationControl{
     padding-bottom: 15px;
 }
+.productos_marcas_treeMenu{
+    
+}
+
+.productos_marcas_treeMenu div{
+    padding-left: 15px;
+    overflow:hidden; background:#f5f5f5 url(../images/treeTabBg.gif) repeat-x 0 0; border:solid 1px #fff; margin:4px 0; -moz-border-radius:3px;  -webkit-border-radius:3px;  border-radius:3px;
+    color: #4D5F6B;
+    width: 178px;
+font-size: 16px;
+padding: 5px 10px;
+display: inline-block;
+text-decoration: none;
+float: left;
+}
+.productos_marcas_treeMenu li{
+    padding-left: 15px;
+}
 
 /*menu*/
 #treeMenu {  right:auto; left:15px; top:23px; width:200px;  font:normal 14px 'Segoe UI', Helvetica, Arial, sans-serif; }
