--- a/application/modules/default/views/scripts/buscar/index.phtml
+++ b/application/modules/default/views/scripts/buscar/index.phtml
@@ -1,23 +1,19 @@
-<div class="grid_5" >
-    Columna Izquierda
+<div class="productos_colum_izq" >
     <?php
     $pagerData = array(
         'getPathInfo' => $this->getPathInfo,
+        'listaMarcas' => $this->listaMarcas,
         'listaCategoriasNavigator' => $this->listaCategoriasNavigator
     );
     echo $this->partial('/partial/menucategorias.phtml', $pagerData)
     ?>
 </div>
-<div class="grid_19" >
-    Columna Derecha
+<div class="productos_colum_derc" >
     <div class="block_content">
         <?php
-        $params = array('slug' => $this->slug);
-        echo $paginator = $this->paginationControl($this->productos, 'Sliding', '/paginator/ProductFor.phtml', $params);
-        $params = array('productos'=>$this->productos,'paginator'=>$paginator);
+        echo $paginator = $this->paginationControl($this->productos, 'Sliding', '/paginator/Product.phtml');
+        $params = array('productos' => $this->productos, 'paginator' => $paginator);
         echo $this->partial('/partial/listaProductosPaginator.phtml', $params)
         ?>
-         
     </div>               
 </div>
-
